--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
----
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: false
----
+<html>
+    <head><title>Work in progress</title></head>
+    <body><img src="./keep-calm-work-in-progress.png" alt="work in progress"></body>
+</html>
