--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <html>
-    <head><title>Work in progress</title></head>
-    <body><img src="./keep-calm-work-in-progress.png" alt="work in progress"></body>
+    <head>
+        <title>Work in progress</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        img {
+            display: block;
+            margin: auto;
+            width: 90%;
+        }
+        </style>
+    </head>
+    <body>
+        <img src="./keep-calm-work-in-progress.png" alt="work in progress">
+    </body>
 </html>
