--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         img {
             display: block;
             margin: auto;
-            width: 90%;
+            width: 600px;
         }
         </style>
     </head>
